--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,7 +3,7 @@ site_url: https://pherngpy.github.io/
 nav:
     - Home: index.md
     - About: about.md
-theme:
-    name:material
+theme: material
+    
     
 
