--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,7 +6,7 @@ nav:
 theme: material
 plugins:
   - search:
-      lang: en
+      - lang: en
 features:
     - search.suggest
     - search.highlight
