--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,13 +3,14 @@ site_url: https://pherngpy.github.io/
 nav:
     - Home: index.md
     - About: about.md
-theme: material
+theme: 
+    name: 'material'
 features:
     - search.suggest
     - search.highlight
     - search.share
 extra:
-    - generator: false
+    generator: false
 
 
 
