--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,12 +5,29 @@ nav:
     - About: about.md
 theme: 
     name: 'material'
+palette: # 
+
+    - scheme: default
+      toggle:
+        icon: material/weather-sunny
+        name: Switch to dark mode
+    - scheme: slate # 
+
+      toggle:
+        icon: material/weather-night
+        name: Switch to light mode
 features:
     - search.suggest
     - search.highlight
     - search.share
+    - navigation.tabs
+    - navigation.tabs.sticky
+    - navigation.tracking
+    - navigation.top
 extra:
     generator: false
-
+plugins:
+  - search:
+      lang: 'en'
 
 
