--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,12 +13,12 @@ theme:
     - navigation.tracking
     - navigation.top
     name: 'material'
-    palette: #
+    palette:
     - scheme: default
         toggle:
           icon: material/weather-sunny
           name: Switch to dark mode
-    - scheme: slate # 
+    - scheme: slate
         toggle:
           icon: material/weather-night
           name: Switch to light mode
