--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,6 +4,15 @@ nav:
     - Home: index.md
     - About: about.md
 theme: 
+    palette:
+    - scheme: default
+      toggle:
+        icon: material/weather-sunny
+        name: Switch to light mode
+    - scheme: slate
+      toggle:
+        icon: material/weather-night
+        name: Switch to dark mode    
     features:
     - search.suggest
     - search.highlight
