--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,6 +6,7 @@ nav:
 theme: 
     palette:
     - primary: cyan
+    - accent: lime
     - scheme: default
       toggle:
         icon: material/weather-sunny
