--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,6 +22,10 @@ theme:
     - navigation.tracking
     - navigation.top
     name: 'material'
+markdown_extensions:
+  - pymdownx.arithmatex:
+      generic: true
+
 extra:
     generator: false
 plugins:
