--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,7 @@ theme:
         icon: material/weather-night
         name: Switch to dark mode 
     features:
+    - content.code.annotate
     - search.suggest
     - search.highlight
     - search.share
