--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,13 +6,17 @@ nav:
 theme: 
     palette:
     - scheme: default
+      primary: indigo
+      accent: indigo
+      toggle:
+        icon: material/weather-night
+        name: Switch to dark mode
+    - scheme: slate
+      primary: red
+      accent: red
       toggle:
         icon: material/weather-sunny
         name: Switch to light mode
-    - scheme: slate
-      toggle:
-        icon: material/weather-night
-        name: Switch to dark mode 
     features:
     - content.code.annotate
     - search.suggest
