--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
-site_name: Gale Documentation
-site_url: https://pherngpy.github.io/
+site_name: ShockBS Documentation
+site_url: https://shockbs.github.io/
 nav:
     - Home: index.md
     - About: about.md
@@ -69,6 +69,9 @@ markdown_extensions:
 extra:
     generator: false
 plugins:
+  - offline
+  - optimize
+  - blog
   - search:
       lang: 'en'
 
